# majestic-minc

./: README.md  environment.yml
ANTs/Examples/: CMakeLists.txt
BEaST/: CMakeLists.txt  ParseArgv.c  ParseArgv.h  array_alloc.h  basic.h  beast_lib.cpp  config.h.cmake  mincbeast_v2.cpp  niftiio.h
BEaST/spams-2.6.1/: INSTALL-package  PKG-INFO  README  setup.py
BEaST/spams-2.6.1/doc/html/: doc_spams003.html
BEaST/spams-2.6.1/doc/sphinx/: index.html  search.html
arguments/: .cvsignore  ARGUMENTSConfig.cmake.in  ChangeLog  Makefile.am  NEWS  TODO  epm-header.in
arguments/doc/: doxygen_config.in
arguments/src/: Makefile.am  arguments.cpp  arguments.h
conda/r-base64url/: meta.yaml
conda/r-batchtools/: meta.yaml
conda/r-bigparallelr/: meta.yaml
conda/r-bigstatsr/: build.sh  meta.yaml
conda/r-data.tree/: meta.yaml
conda/r-digest/: meta.yaml
conda/r-ff/: meta.yaml
conda/r-flock/: meta.yaml
conda/r-fs/: meta.yaml
conda/r-progress/: meta.yaml
conda/r-rjson/: meta.yaml
conda/r-rminc/: build.sh  meta.yaml
conda/r-rmio/: meta.yaml
glim_image/: ChangeLog  Makefile.am  glim.h  glim_image.c  matrix.c  smoothness.c
inormalize/: AUTHORS  ChangeLog  autogen.sh  config.h.cmake  configure.ac  epm-header.in  inormalize.cc  inormalize.h  normalize_mri.in
minc_gco/: README.md
minc_gco/src/: gco_classify.cpp  gco_segment.cpp  label_interaction_estimate.cpp
minc_gco/src/gco/: energy.h  maxflow.cpp
mni-perllib/: CMakeLists.txt  autosplit.pl
mni-perllib/MNI/: Spawn.pm  TagPoint.pm  TagSet.pm
oobicpl/: Makefile.am  NEWS  OOBICPLConfig.cmake.in  UseOOBICPL.cmake.in  configure.ac  epm-header.in
oobicpl/docs/: vertstats_file_format.lyx  vertstats_file_format.sgml
oobicpl/src/: Makefile.am  mniBaseVolume.h  mniLabelVolume.h  mniVertstatsMath.h  mniVolume.cc  multipleColumnsFileTest.cc  multiple_columns_file.vertstats  new_style_file.vertstats  single_column_file.txt  surface_probability_map.cc  surface_volume_coordinates.cc  tree.hh  vertstat_to_volume.cc  vertstatsExtract.cc  vertstatsTests.cc  vertstats_colour_object.cc  vertstatsinfo.cc
ray_trace/: CMakeLists.txt  config.h.cmake  ray_trace.c
ray_trace/Include/: ray_trace_prototypes.h
